least-squares, straight line, gravity network and epicenter

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs\\fig1.png', width=700>"
+    "<img src='epicenter_figs\\fig1.png' width=700>"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs\\fig2.png', width=700>"
+    "<img src='epicenter_figs\\fig2.png' width=700>"
    ]
   },
   {
@@ -964,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs/epicenters_lm.png', width=500>"
+    "<img src='epicenter_figs/epicenters_lm.png' width=500>"
    ]
   },
   {
@@ -978,7 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs/convergence_lm.png', width=500>"
+    "<img src='epicenter_figs/convergence_lm.png' width=500>"
    ]
   },
   {
@@ -992,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs/datafit_lm.png', width=500>"
+    "<img src='epicenter_figs/datafit_lm.png' width=500>"
    ]
   },
   {
@@ -1007,21 +1007,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
