tick least squares and grav net

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -135,9 +135,9 @@
    "source": [
     "Besides, let's consider that:\n",
     "\n",
-    "i. all gravity differences have the same variance $\\sigma_{\\ell}^{2}$;\n",
-    "ii. all absolute gravity values have the same variance $\\sigma_{\\tilde{g}}^{2}$ and\n",
-    "iii. the data are statistically uncorrelated.\n",
+    "(i) all gravity differences have the same variance $\\sigma_{\\ell}^{2}$;\n",
+    "(ii) all absolute gravity values have the same variance $\\sigma_{\\tilde{g}}^{2}$ and\n",
+    "(iii) the data are statistically uncorrelated.\n",
     "\n",
     "In this case, it is possible to estimate the particular parameter vector $\\mathbf{g}^{\\ast}$ minimizing the goal function:\n",
     "\n",
