interpolation, finite differences, numerical integration

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Auxiliary functions'></a>\n",
+    "<a id='Auxiliary_functions'></a>\n",
     "#### Auxiliary functions"
    ]
   },
@@ -948,7 +948,7 @@
    "source": [
     "By using one of your functions for solving linear systems and your functions for computing the Jacobian and Hessian matrices, implement the **Newton's**, **Gauss-Newton**, **Steepest Decent**, and **Levenberg-Marquardt** method.\n",
     "\n",
-    "After estimating the epicenter by using these methods, use the [Auxiliary functions](#Auxiliary functions) to plot the results. The following cells present some results obtained with the Levenberg-Marquardt method:"
+    "After estimating the epicenter by using these methods, use the [Auxiliary functions](#Auxiliary_functions) to plot the results. The following cells present some results obtained with the Levenberg-Marquardt method:"
    ]
   },
   {
