--- a/Content/biharmonic-splines.ipynb
+++ b/Content/biharmonic-splines.ipynb
@@ -19,6 +19,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In your `my_functions.py` file,\n",
+    "\n",
+    "1. create a function called `pol1d_matrix` to calculate the matrix `A` associated with an 1D polynomial od degree `D`. The function must receive the data coordinates `x` and the degree `D` and return the matrix `A` used in the polynomial fitting. \n",
+    "\n",
+    "2. create a function `pol1d_coeffs` to estimate the coefficients of a 1D polynomial that fits a given dataset. The function must receive the data coordinates `x`, the degree `D` of the polynomial and the 1d-array containing the data `y`. The function must return a 1D-array `p` containing the coefficients of the polynomial. Use the function `pol1d_matrix` and your previous functions for calculating the matrix operations and solving the linear system.\n",
+    "\n",
+    "3. create a function `pol1d_interpol` to interpolate data. The function must receive the interpolating points `x0` and the 1D-array of coefficients `p` calculated with the function `pol1d_coeffs` and return a 1D-array containing the interpolated points. Use the function `pol1d_matrix` and your previous functions for calculating the matrix operations.\n",
+    "\n",
+    "In your `test_my_functions.py`, \n",
+    "\n",
+    "4. create a test to compare the result produced by `pol1d_matrix` and that produced by the routine [`numpy.polynomial.polynomial.polyvander`](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.polynomial.polynomial.polyvander.html) (See the example above).\n",
+    "\n",
+    "5. create a test for function `pol1d_coeffs`. This test must simulate data produced by a known polynomial and use these data to estimate the coefficients of the polynomial with your function `pol1d_coeffs`.\n",
+    "\n",
+    "In a `Jupyter Notebook`,\n",
+    "\n",
+    "6. Simulate data `d` produced by a given 1D polynomial at irregularly spaced points `x`. Simulate data `d_regular` produced by the same 1D polynomial at regularly spaced points `x_regular`. Use your function `pol1d_interpol` to estimate the coefficients of the polynomial by using the irregularly spaced data `d`. Use your function `pol1d_interpol` to interpolate data at the regularly spaced points `x_regular`. Plot the interpolated data obtained with your function `pol1d_interpol` and the true data set `d_regular`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -140,79 +163,25 @@
     "\n",
     "5. Use the function `pol1d_interpol` to interpolate the gravity data on a regular profile. Plot a Figure similar to the gravity profile shown above containing: (i) the original data (black dots on the gravity profile) and (ii) the interpolated points."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example of the routine [`numpy.polynomial.polynomial.polyvander`](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.polynomial.polynomial.polyvander.html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from numpy.polynomial.polynomial import polyvander"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(1, 5)\n",
-    "degree = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  1.   1.   1.   1.]\n",
-      " [  1.   2.   4.   8.]\n",
-      " [  1.   3.   9.  27.]\n",
-      " [  1.   4.  16.  64.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print polyvander(x, degree)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The matrix in the cell above is used in the 1D polynomial fitting."
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
