--- a/Content/first_steps_Python/swc-python/topic-1.ipynb
+++ b/Content/first_steps_Python/swc-python/topic-1.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3+5*4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., ..., 3., 0., 0.],\n",
+       "       [0., 1., 2., ..., 1., 0., 1.],\n",
+       "       [0., 1., 1., ..., 2., 1., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 1., ..., 1., 1., 1.],\n",
+       "       [0., 0., 0., ..., 0., 2., 0.],\n",
+       "       [0., 0., 1., ..., 1., 1., 0.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
    ]
@@ -51,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
