include references in fourier_1D_4

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -24,6 +24,10 @@
     "* [1D Discrete Fourier Transform](#sec2)\n",
     "    * [Sampling Theorem](#sec2.1)\n",
     "    * [Numerical approximations for equations 39 and 40](#sec2.2)\n",
+    "    * [Discrete Fourier Transform in matrix notation](#sec2.3)\n",
+    "\n",
+    "\n",
+    "* [References](#sec3)\n",
     "\n",
     "\n",
     "* [Exercise](#exercise)"
@@ -87,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and $f_{n} = n \\, f_{0}$. [Equation 38b](#eq38b) represents a function evaluated at discrete values of the variable $f_{n}$. Notice that $f_{0}$ represents the increment in the variable $f_{n}$. Moreover, $n \\to \\pm \\infty$, $f_{n} \\to \\pm \\infty$. By letting $T_{0} \\rightarrow \\infty$, $f_{0}$ tends to an infinitesimal $df$, $f_{n}$ tends to a continuous variable and the functions $g(y)$ ([equation 38a](#eq38a)) and $G(f_{n})$ ([equation 38b](#eq38b)) become"
+    "and $f_{n} = n \\, f_{0}$. [Equation 38b](#eq38b) represents a function evaluated at discrete values of the variable $f_{n}$. Notice that $f_{0}$ represents the increment in the variable $f_{n}$. Moreover, $n \\to \\pm \\infty$, $f_{n} \\to \\pm \\infty$. By letting $T_{0} \\rightarrow \\infty$, $f_{0}$ tends to an infinitesimal $df$, $f_{n}$ tends to a continuous variable and the functions $g(y)$ ([equation 38a](#eq38a)) and $G(f_{n})$ ([equation 38b](#eq38b)) becomes (Osgood, 2007, p. 68)"
    ]
   },
   {
@@ -128,7 +132,7 @@
     "Equations [39](#eq39) and [40](#eq40) are known as **Inverse Fourier Transform** and **Fourier Transform**, respectively. By considering that $y$ is length/time, we say that $g(y)$ is in space/time domain and $G(f)$ is in Fourier domain. If $y$ is measured in seconds, then $f$ is in cycles per second, or Hertz (the unit of frequency). If $y$ is measured in meters, $f$ cycles per meter, or inverse wavelength. For many purposes it is useful to think of $g(y)$ and $G(f)$ as being two different representations of the same function.\n",
     "\n",
     "\n",
-    "Notice that equations [39](#eq39) and [40](#eq40) deal with continuous functions that are integrated from $-\\infty$ to $\\infty$. In practical situations, we want to calculate the Fourier Transform $G(f)$ ([equation 40](#eq40)) of a function $g(y)$ that is evaluated on a discrete set of points $y$. In this case, we solve [equation 40](#eq40) numerically in order to obtain estimates of $G(f)$ at a discrete set of points $f$. These discrete forms of equations [39](#eq39) and [40](#eq40) are called **Discrete Inverse Fourier Transform** and **Discrete Fourier Transform**, respectively."
+    "Notice that equations [39](#eq39) and [40](#eq40) deal with continuous functions that are integrated from $-\\infty$ to $\\infty$. In practical situations, we want to calculate the Fourier Transform $G(f)$ ([equation 40](#eq40)) of a function $g(y)$ that is evaluated on a discrete set of points $y$. In this case, we solve [equation 40](#eq40) numerically in order to obtain estimates of $G(f)$ at a discrete set of points $f$. These discrete forms of equations [39](#eq39) and [40](#eq40) are called **Inverse Discrete Fourier Transform** and **Discrete Fourier Transform**, respectively."
    ]
   },
   {
@@ -187,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For any sampling interval $\\Delta y$, there is also a special frequency $f_{c}$, called the **Nyquist critical frequency**, given by (Press et al., 1992):"
+    "For any sampling interval $\\Delta y$, there is also a special frequency $f_{c}$, called the **Nyquist critical frequency**, given by (Press et al., 2007, p. 605):"
    ]
   },
   {
@@ -205,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the **sampling theorem**: If a continuous function $g(y)$, sampled at an interval $\\Delta y$, happens to be bandwidth limited to frequencies smaller in magnitude than $f_{c}$, i.e., if $G(f) = 0$ for all $\\lvert \\, f \\, \\rvert  \\ge f_{c} \\,$, then the function $g(y)$ is completely determined by its samples $g_{i}$ (Press et al., 1992)."
+    "According to the **sampling theorem**: If a continuous function $g(y)$, sampled at an interval $\\Delta y$, happens to be bandwidth limited to frequencies smaller in magnitude than $f_{c}$, i.e., if $G(f) = 0$ for all $\\lvert \\, f \\, \\rvert  \\ge f_{c} \\,$, then the function $g(y)$ is completely determined by its samples $g_{i}$ (Press et al., 2007, p. 605)."
    ]
   },
   {
@@ -282,14 +286,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $G(f_{n}) \\approx \\Delta y \\, G_{n}$ (Press et al., 1992)."
+    "where $G(f_{n}) \\approx \\Delta y \\, G_{n}$ (Press et al., 2007, p. 607)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly to the approximation defined by equation [44](#ep44), we can approximate the integral [39](#eq39) as follows:"
+    "Similarly to the approximation defined by equation [44](#ep44), we can approximate the integral [39](#eq39) as follows (Press et al., 2007, p. 608):"
    ]
   },
   {
@@ -404,14 +408,14 @@
    "source": [
     "In [equation 43](#eq43), $n$ varies from $−\\frac{N}{2}$ to $\\frac{N}{2}$. Notice that $G_{n}$ ([equation 45](#eq45)) is periodic $n$, with period $N$. This can be seen by noting that both $g_{k}$ and the negative exponential in [equation 45](#eq45) are periodic with period $N$. Therefore, $G_{-N/2} = G_{N/2}$ or, in a general form, $G_{n} = G_{n+N}$, $n = 1, 2, \\dots$.\n",
     "\n",
-    "With this conversion in mind, one generally lets $n$ varies from $0$ to $N − 1$ (one complete period). Then $n$ and $k$ vary exactly over the same range. When this convention is followed, you must remember that zero frequency corresponds to $n = 0$, positive frequencies $0 < f < f_{c}$ correspond to values $1 \\le n \\le (N/2) − 1$, and negative frequencies $−f_{c} < f < 0$ correspond to $(N/2) \\le n \\le N−1$. The value $n = N/2$ corresponds to both $G_{-N/2}$ and $G_{N/2}$ (Press et al., 1992)."
+    "With this conversion in mind, one generally lets $n$ varies from $0$ to $N − 1$ (one complete period). Then $n$ and $k$ vary exactly over the same range. When this convention is followed, you must remember that zero frequency corresponds to $n = 0$, positive frequencies $0 < f < f_{c}$ correspond to values $1 \\le n \\le (N/2) − 1$, and negative frequencies $−f_{c} < f < 0$ correspond to $(N/2) \\le n \\le N−1$. The value $n = N/2$ corresponds to both $G_{-N/2}$ and $G_{N/2}$ (Press et al., 2007, p. 608)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the approximation defined by [equation 46a](#eq46a) and the considerations given above, the **Discrete Inverse Fourier Transform** can be written as follows:"
+    "Based on the approximation defined by [equation 46a](#eq46a) and the considerations given above, the **Discrete Inverse Fourier Transform** can be written as follows (Press et al., 2007, p. 608):"
    ]
   },
   {
@@ -678,13 +682,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='sec3'></a>\n",
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Osgood, B. G. (2007). *Lecture Notes for EE 261 The Fourier Transform and its Applications*, Electrical Engineering Department, Stanford University. url: https://see.stanford.edu/Course/EE261\n",
+    "\n",
+    "Press, William H., Teukolsky, Saul A., Vetterling, William T., Flannery, Brian P. (2007). *Numerical Recipes: The Art of Scientific Computing*, 3rd ed., New York: Cambridge University Press. ISBN 978-0-521-88068-8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "<a id='exercise'></a>\n",
     "\n",
-    "### Exercise"
+    "## Exercise"
    ]
   },
   {
@@ -841,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
