diagonal, triangular and fourier series

--- a/Content/diagonal_matrices_part1.ipynb
+++ b/Content/diagonal_matrices_part1.ipynb
@@ -20,9 +20,9 @@
    "source": [
     "$$\\mathbf{D} \n",
     "= \\left[ \\begin{array}{ccc}\n",
-    "d_{11} &  &  \\\\\n",
+    "d_{00} &  &  \\\\\n",
     " & \\ddots &  \\\\\n",
-    " &  & d_{NN}\n",
+    " &  & d_{N-1N-1}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -40,9 +40,9 @@
    "source": [
     "$$\\mathbf{d} = diag \\left( \\mathbf{D} \\right) = \n",
     "\\left[ \\begin{array}{c}\n",
-    "d_{11} \\\\\n",
+    "d_{00} \\\\\n",
     "\\vdots \\\\\n",
-    "d_{NN}\n",
+    "d_{N-1N-1}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -60,9 +60,9 @@
    "source": [
     "$$\\mathbf{x} = \n",
     "\\left[ \\begin{array}{c}\n",
-    "x_{1} \\\\\n",
+    "x_{0} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{N-1}\n",
     "\\end{array} \\right] \\: .\n",
     "$$"
    ]
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
+    "    for i = 0:N-1\n",
     "        C[i, :] = d[i]*B[i,:]"
    ]
   },
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for j = 1:N\n",
+    "    for j = 0:N-1\n",
     "        E[:,j] = d[j]*B[:,j]"
    ]
   },
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
