--- a/Content/diagonal_matrices_part2.ipynb
+++ b/Content/diagonal_matrices_part2.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "$$\\mathbf{D}_{2} = \\begin{bmatrix}\n",
-    "0 & 0 & d_{13} & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & d_{24} & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & d_{35} \\\\\n",
+    "0 & 0 & d_{02} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & d_{13} & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & d_{24} \\\\\n",
     "0 & 0 & 0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & 0 & 0\n",
     "\\end{bmatrix}\n",
@@ -34,10 +34,10 @@
    "source": [
     "$$\\mathbf{D}_{-1} = \\begin{bmatrix}\n",
     "0 & 0 & 0 & 0 & 0 \\\\\n",
-    "d_{21} & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & d_{32} & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & d_{43} & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & d_{54} & 0\n",
+    "d_{10} & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & d_{21} & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & d_{32} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & d_{43} & 0\n",
     "\\end{bmatrix}\n",
     "$$"
    ]
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that $k$ is an integer varying from $-N+1$ to $N-1$. Similarly to the case $k = 0$, the product of $\\mathbf{D}_{k}$ and a vector $\\mathbf{x}$ for $k \\ne 0$ can be defined in terms of the Hadamard product (see the notebook `hadamard.ipynb`), as follows:"
+    "Notice that $k$ is an integer varying from $-(N-1)$ to $N-1$. Similarly to the case $k = 0$, the product of $\\mathbf{D}_{k}$ and a vector $\\mathbf{x}$ for $k \\ne 0$ can be defined in terms of the Hadamard product (see the notebook `hadamard.ipynb`), as follows:"
    ]
   },
   {
@@ -85,8 +85,15 @@
     "\\mathbf{D}_{k} \\mathbf{x} = \\begin{bmatrix}\n",
     "\\mathbf{0}_{(-k) \\times 1} \\\\\n",
     "\\mathbf{d} \\circ \\mathbf{x}[ \\, : N+k ]\n",
-    "\\end{bmatrix} \\: , \\quad k < 0 \\: .\n",
+    "\\end{bmatrix} \\: , \\quad k < 0 \\: ,\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{d}$ is a $(N - \\mid k \\mid) \\times 1$ vector containing the non-null elements of $\\mathbf{D}_{k}$."
    ]
   },
   {
@@ -122,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
