include fourier_series_examples and cite in fourier_1D_1 and 2

--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -38,7 +38,7 @@
     "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonality relations between sine and cosine functions](#subsec2.1)\n",
     "\n",
     "\n",
-    "* [Exercise](#ex1-part1)"
+    "* notebook `fourier_series_examples.ipynb`"
    ]
   },
   {
@@ -702,55 +702,6 @@
     "$$\n",
     "b_{n} = \\frac{1}{\\pi} \\int \\limits_{-\\pi}^{\\pi} \\sin \\left( n \\, x \\right) \\, f (x) \\; dx \\quad . \\tag{16}\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='ex1-part1'></a>\n",
-    "\n",
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Consider the following function:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "f(x) = \n",
-    "\\begin{cases} \\begin{split}\n",
-    "0 \\: &, \\quad -\\pi &\\le x < 0 \\\\\n",
-    "1 \\: &, \\quad 0 &\\le x < \\pi\n",
-    "\\end{split} \\end{cases}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where $f(x) = f(x + n \\, 2 \\pi)$, $n = 0, 1, 2, \\dots$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Determine the coefficients of the Fourier series.\n",
-    "\n",
-    "2. Create a function that receives an array `x` and returns another array containing the values of the function $f(x)$.\n",
-    "\n",
-    "3. Create a function that receives an array `x` and an integer `N` and returns another array containing the Fourier series evaluated from `n = 0` until `n = N`.\n",
-    "\n",
-    "4. Plot the function `f(x)` and its Fourier series."
    ]
   },
   {
