--- a/Content/fourier_1D_2.ipynb
+++ b/Content/fourier_1D_2.ipynb
@@ -45,7 +45,10 @@
     "\n",
     "* [Fourier series defined as a combination of complex exponentials for describing functions with period $2 \\pi$](#sec4)\n",
     "\n",
-    "    * [Calculating $c_{n}$ by using the orthogonality relations between complex exponentials](#subsec4.1)"
+    "    * [Calculating $c_{n}$ by using the orthogonality relations between complex exponentials](#subsec4.1)\n",
+    "\n",
+    "\n",
+    "* notebook `fourier_series_examples.ipynb`"
    ]
   },
   {
