fourier series for functions with arbitrary period T0

--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents"
+    "## Topics"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonality relations between sine and cosine functions](#subsec2.1)\n",
     "\n",
     "\n",
-    "* notebook `fourier_series_examples.ipynb`"
+    "* notebook `fourier_series_2pi.ipynb`"
    ]
   },
   {
