fourier_1D_4, fourier_1D_5, toeplitz-circular matrices and convolution

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -549,83 +549,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.linalg import dft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W = dft(n=10, scale='n')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.allclose(np.dot(W, np.conjugate(W)), np.identity(10))"
+    "from scipy.linalg import dft\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = dft(n=10, scale='n')"
+    "N=10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(np.dot(W, np.conjugate(W)), 0.1*np.identity(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = dft(n=10) # scale=None"
+    "FN = dft(N, scale='sqrtn')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -634,18 +586,18 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(np.dot(W, np.conjugate(W)), 10*np.identity(10))"
+    "np.allclose(np.conj(FN), np.conj(FN).T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -654,13 +606,102 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(np.conjugate(W), np.conjugate(W).T)"
+    "np.allclose(FN, FN.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FN_inv = (1/N)*np.conj(FN)\n",
+    "FN_inv = np.conj(FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FN_inv_FN = np.dot(FN_inv, FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(FN_inv_FN, np.identity(N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FN_FN_inv = np.dot(FN, FN_inv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(FN_FN_inv, np.identity(N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.allclose(np.dot(FN, np.conj(FN)), N*np.identity(N))\n",
+    "np.allclose(np.dot(FN, np.conj(FN)), np.identity(N))"
    ]
   },
   {
@@ -702,130 +743,6 @@
     "5. In your `my_function.py` file, create a function called `ifft1D`. The function must receive the complex vector $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`). Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conjugate(A).T`.\n",
     "6. In your file `test_my_function.py`, create one test for the function `ifft1D`. This test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fftpack.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W = dft(N, scale=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.dot(W, np.conjugate(W).T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 7., -0., -0.,  0.,  0.,  0.,  0.],\n",
-       "       [-0.,  7., -0., -0.,  0., -0.,  0.],\n",
-       "       [-0., -0.,  7., -0.,  0., -0.,  0.],\n",
-       "       [ 0., -0., -0.,  7.,  0., -0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  7., -0.,  0.],\n",
-       "       [ 0., -0., -0., -0., -0.,  7., -0.],\n",
-       "       [ 0.,  0.,  0.,  0., -0., -0.,  7.]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.round(A.real, decimals=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0., -0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0., -0.,  0., -0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0., -0.,  0.],\n",
-       "       [-0., -0., -0.,  0.,  0.,  0.,  0.],\n",
-       "       [-0.,  0., -0., -0.,  0.,  0.,  0.],\n",
-       "       [-0., -0.,  0.,  0., -0.,  0., -0.],\n",
-       "       [-0., -0., -0., -0., -0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.round(A.imag, decimals=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = np.arange(N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(np.exp(-1j*2*np.pi*np.outer(n,n)/N), dft(N, scale=None))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
